--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -145,9 +145,9 @@ While the focus here is on vertical gradients, it is important to note that in h
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV).](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
- The distribution of this foliage is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density ($LAD$) ie. leaf area per unit volume, increases with tree-height eventually forming the canopy layer.
+ The distribution of this foliage is structured in correspondence with the distribution of tree sizes, and successional stages within a forest, where leaf area density ($LAD$) ie. leaf area per unit volume, increases with tree-height eventually forming the canopy layer.
 
-LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory for eg. in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985]. In open canopy forests, such as needle-leaf boreal forests, LAD is predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016].SOil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
+LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory for eg. in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a]. In open canopy forests, such as needle-leaf forests, LAD is predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a].Soil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the shape of profile modified by leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`, @koike_leaf_2001].** 
 This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests, than open canopy forests such as needle-leaf forests [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
@@ -256,7 +256,7 @@ The distribution of biochemical traits enable photosynthesis and metabolic proce
 
 ### Interspecific variation 
 
-Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds based on inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds based on inherent specie-specific traits. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space, with different levels of trait plasticity [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -286,7 +286,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] because although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. 
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. This diurnal pattern and resulting $A_{max}$ differs between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
 
 ### Photosynthesis
 
