--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -170,8 +170,8 @@ In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) --
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
 **The buffering patterns described above vary geographically, seasonally, and across forests types [REFS; *Defrenne et al. 2021*].**
-The strength of buffering in high elevation across with forests, in some cases decreases when (**THIS WILL NOT ALWAYS BE TRUE!--e.g., semi-arid regions where forest cover increases with elevation**) moving to open-forests , and increases with canopy density [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018]. Buffering capacity is also greater in wetter than drier regions [**REF**] and increases with proximity to water, for example in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
-Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in set seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018**double check these refs--at least one didn't belong**].
+The strength of buffering in high elevation with forest type, in some cases decreases when (**THIS WILL NOT ALWAYS BE TRUE!--e.g., semi-arid regions where forest cover increases with elevation**) moving to open-forests , and increases with canopy density [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018]. Buffering capacity is also greater in wetter than drier regions [**REF**] and increases with proximity to water, for example in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
+Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018**double check these refs--at least one didn't belong**].
 
 ## Leaf temperature 
 
@@ -200,7 +200,7 @@ However, when high irradiance, $T_{air}$, $VPD$ or drought cause leaf water dema
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @pauTropicalForestTemperature2018].
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
- Inherent leaf $gs$ is generally greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
+ Inherent leaf $gs$ is generally greater across species exposed sun-leaves than shade leaves, due to stomata density [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
 
 Lastly, canopy structure and architecture adaptation can also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
@@ -225,15 +225,16 @@ Isolating height (>35m) from light shows that, canopy $gs$ decreases with increa
 Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research that is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
+Leaf traits vary within an indivual tree at a vertical gradient from exposed canopy regions to shaded regions (intraspecific variation), and as well across mutiple trees' exposed canopy to shaded canopy regions (inter-specific variation). 
 
-Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
+Therefore, across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
 However, when it comes to understanding and modeling forest ecosystem function, the relevant scale of variation is interspecific (e.g., *Lamour, Serbin in prep*).
 
 
 ### Intraspecific variation
 
-Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. Further, there is a need for research to characterize trait relationships and responses through the vertical canopy, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Leaf traits vary--from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits`, summarizes relevant traits for thermal sensitivity. Further, the need for research to characterize trait relationships and responses through the vertical canopy is becoming a need, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -256,7 +257,7 @@ The distribution of biochemical traits enable photosynthesis and metabolic proce
 
 ### Interspecific variation 
 
-Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds based on inherent specie-specific traits. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space, with different levels of trait plasticity [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Widely, across forest species, fundamental trait adaptation to light gradients are similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], that further vary with levels of trait plasticity [REF], for eg. between  canopy multi-species, and understory species, trait plasticity can vary several-folds based on inherent specie-specific traits, even under similar biophysical conditions respectively. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space, with different levels of plasticity [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -267,7 +268,7 @@ New-leaf growth along the light gradient constantly shades leaves underneath. Th
 
 ##### *Deciduousness*
 
-Deciduousness as a trait is an adaptation to converse water under stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000c]. In deciduous-temperate forests, spatio-temporal leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999].Therefore, deciduous leaf-loss or -gain can alter biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. 
+Deciduousness as a trait is an adaptation to converse water under stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000c]. In deciduous-temperate forests, spatio-temporal leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999].Therefore, deciduous leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient [@rey-sanchez_spatial_2016]. 
 
 ## Leaf metabolism and thermal responses
 
@@ -308,7 +309,7 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
+In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
 
 Further, leaf thermal tolerances are more adapted to microenvironment than macroclimate [@feeley_thermal_2020; Slot et al. 2020]. Particularly, in an Australian arid region, *Acacia Papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
 
@@ -381,9 +382,9 @@ Having established how physical conditions and biological form and function vary
 
 The complex interactions of the biophysical environment and biological--leaf traits, metabolic processes and distribution of trees--are highly interconneced, resulting in feedback loops to another. Therefore, climate-driven changes have implications on forests at many levels.  
 
-### canopy disturbance and global warming
+### canopy disturbance and warming
 
-Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment. This buffering is influenced by the hydraulogical-cycle at large, therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP, specifically in the tropics, where thermal limits are narrower than temperate forests.
+Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment. This buffering is influenced by the hydraulogical-cycle at large, therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP, specifically in the tropics where thermal limits are narrower than temperate forests.
 
 Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
